scripts/nullaway/annotator/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8.txt
../annotator/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:12: error: [NullAway] enhanced-for expression variableList is @Nullable
		for (VariableInformation var : variableList)
		                               ^
    (see http://t.uber.com/nullaway )
../annotator/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:59: error: [NullAway] dereferenced expression parseRoot is @Nullable
		for (int i = 0; i < parseRoot.children.size(); i++) {
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:23: error: [NullAway] dereferenced expression node is @Nullable
		if (node.attribute.equals("DECLARE"))
		        ^
    (see http://t.uber.com/nullaway )
../annotator/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:73: error: [NullAway] dereferenced expression ast is @Nullable
		parseTree.value = ast.getText();
		                     ^
    (see http://t.uber.com/nullaway )
4 errors
